Bug 323651 - nepomukindexer runs endlessly at 100% CPU on 1 core when the attached file is indexed
Summary: nepomukindexer runs endlessly at 100% CPU on 1 core when the attached file is...
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: fileindexer (other bugs)
Version First Reported In: 4.11.0
Platform: Kubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Nepomuk Bugs Coordination
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-17 19:18 UTC by Aljaž Kolšek
Modified: 2013-08-27 02:44 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.1
Sentry Crash Report:


Attachments
This is a file that causes the crash. (193.42 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2013-08-17 19:22 UTC, Aljaž Kolšek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aljaž Kolšek 2013-08-17 19:18:46 UTC
I upgraded KDE on Kubuntu 13.04 with backports PPA to a version 4.11, when I noticed that nepomukindexer runs endlessly at 100% CPU on 1 core when the file in URL is indexed.

Reproducible: Always

Steps to Reproduce:
1. Download file in the URL
2. Wait until nepomukindexer starts indexing
3. Run in terminal # ps aux | grep nepomukindexer
Actual Results:  
The file in question is being indexed and nepomukindexer runs endlessly at 100% CPU

Expected Results:  
Move to the next file.
Comment 1 Aljaž Kolšek 2013-08-17 19:22:58 UTC
Created attachment 81759 [details]
This is a file that causes the crash.

This file causes nepomukindexer to run endlessly.
Comment 2 Simeon Bird 2013-08-18 05:21:47 UTC
Thanks - actually I can't open it in LibreOffice either here (although that is no excuse). It brings up a Calc text import box. What sort of a file is this?
Comment 3 Aljaž Kolšek 2013-08-18 05:27:33 UTC
This is a presentation I got from a coworker, but it doesn't work.
Comment 4 Simeon Bird 2013-08-18 05:56:15 UTC
In fact, it doesn't even open in MS powerpoint...I think your coworker is playing tricks on you. But nepomuk should not choke on any files, even the most broken, so this should still be fixed.
Comment 5 Aljaž Kolšek 2013-08-18 06:01:49 UTC
I'm not really sure what happened with that presentation, but I am sure he wasn't playing tricks. When I open the file, more than 300 pages are filled with question marks and other nonsense.
Comment 6 Alejandro Nova 2013-08-19 04:22:13 UTC
I'm getting the same with some epub files, so this is a bug on how nepomukfileindexer handles nepomukindexer crashes. Confirmed on my end.
Comment 7 Simeon Bird 2013-08-19 04:26:49 UTC
Aljaz: thank you for reporting the bug, I have fixed it and the fix should be in 4.11.1

Alejandro Nova: epub is a different extractor, so that is a different bug. Could you please file a different bug and attach the broken file? Thanks.
Comment 8 Alejandro Nova 2013-08-19 04:37:49 UTC
I erased the offending file, so I cannot file another bug; my mistake. If I get the same behavior after 4.11.1 with another file I'll file a new bug.
Comment 9 Simeon Bird 2013-08-27 02:44:06 UTC
Git commit fb39a0a03e7abb197cde34d2e0b7dc0c4ecf9c07 by Simeon Bird.
Committed on 18/08/2013 at 19:45.
Pushed by sbird into branch 'KDE/4.11'.

Office2007 Extractor: fix possible infinite loop.

The Qt documentation says that when QXmlStreamReader.readNext() reports
an error, atEnd() should be true, but it seems to be lying.
Check for QXmlStreamReader.hasError() separately and break out of the
reader loop.
FIXED-IN: 4.11.1

M  +2    -2    services/fileindexer/indexer/office2007extractor.cpp

http://commits.kde.org/nepomuk-core/fb39a0a03e7abb197cde34d2e0b7dc0c4ecf9c07