Office2007 Extractor: fix possible infinite loop.

The Qt documentation says that when QXmlStreamReader.readNext() reports
an error, atEnd() should be true, but it seems to be lying.
Check for QXmlStreamReader.hasError() separately and break out of the
reader loop.

BUG: 323651
FIXED-IN: 4.11.1